# USBeSafe

./: .gitignore  Journal.md  Pflichtenheft.md  README.md
components/: install_host.sh
components/guest/: README.md
components/guest/init-script/: README  install.sh
components/guest/scanner/: README  README.md  scanner.py
components/guest/usbesafed-vm/: Cargo.toml  SETUP.md
components/guest/usbesafed-vm/src/: host_communication.py  main.py  orchestrator-vm  orchestrator.py  usbesafed-vm  usbesafed-vm.init  usbesafed-vm.sh
components/host/usbesafe-cli/: Cargo.toml  README.md  pyproject.toml
components/host/usbesafe-cli/src/usbesafe_cli/: __init__.py  commands.py  config.py  daemon.py  main.py  scanner.py  usb.py  virtual_usb.py  vm.py
components/host/usbesafed/: Cargo.toml  SETUP.md  daemon.py
components/host/usbesafed-py/: daemon.py
components/host/usbesafed/src/: checkAndLoadBadUSBConfig.py  check_and_load_bad_usb_config.py  create_base_image.py  edit_base_image.py  host_daemon.py  host_daemon_test.py  main.rs  manage_usb_ids.py  placeholder.py  popup.py  run_headless_vm.py  test_daemon.py  test_run_headless_vm.py  test_vusb.py  unauthorized_event.txt  usbesafed.py  vusb.py
docs/: Journal.md  Outline.md  Requirements_Specification.md
docs/findings/: DisableHIDInputDevicesOnLinux.md  Identify-USB-Device-Type.md
docs/findings/badusb/: Bad_usb_protection.md  Identify-USB-Device-Type.md
docs/findings/identifying-unauthorized-usb-device/: 1_activity_before_vm.puml  2_activity_in_vm.puml  info.md
files/: usbesafe.conf
(+7 files in other folders)
